make the background to body element

--- a/app/globals.css
+++ b/app/globals.css
@@ -29,7 +29,9 @@
         @apply text-white
     }
     body{
-        background-color: black;
+        /* background-color: black; */
+        background-size: cover;
+        background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url("/bg.jpg");
     }
 }
 
@@ -44,12 +46,8 @@
 
 @layer utilities{
     .bg-cover{
-        background-size: cover;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url("/bg.jpg");
+        /* background-size: cover;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url("/bg.jpg"); */
     
 }
-        /* background: url("/bg.jpg");
-        background-repeat: no-repeat;
-        background-size: cover; */
-    
 }
