--- a/app/globals.css
+++ b/app/globals.css
@@ -28,9 +28,11 @@
     html {
         @apply text-white
     }
+
     body{
-        /* background-color: black; */
         background-size: cover;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
         background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url("/bg.jpg");
     }
 }
@@ -47,7 +49,9 @@
 @layer utilities{
     .bg-cover{
         /* background-size: cover;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url("/bg.jpg"); */
-    
 }
+    
 }
